Tutorial/Labs/istio_1_26_security_exam_lab_pack_v2/03-secure-ingress/payment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: security-labs
spec:
  template:
    spec:
      containers:
      - name: nginx
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-config
        configMap:
          name: payment-ingress-config
